--- a/minesweeper/templates/game.html
+++ b/minesweeper/templates/game.html
@@ -36,14 +36,6 @@
 
 <div class='container'>
     <div class='row'>
-        <div class='col-md-4 col-md-offset-4'>
-            <div id='message' class={{ message_class }}>{{ message }}</div>
-        </div>
-    </div>
-</div>
-
-<div class='container'>
-    <div class='row'>
         <div class='col-md-12'>
         <button class='btn btn-primary control' id='undo' value='undo'><i class="fa fa-undo" aria-hidden="true"></i></button>
         <button class='btn btn-flag not-activated control' id='toggle-flag' value='clear'><i class="fa fa-flag" aria-hidden="true"></i></button>
@@ -52,13 +44,49 @@
     </div>
 </div>
 
+<div class='new_game_modal_container'>
+    <div class='modal fade new_game_modal modal-wide' id='newgamemodal' tabindex='-1' role='dialog' aria-labelledby='newGameModal' aria-hidden='true'>
+        <div class='modal-dialog modal-lg'>
+            <div class='modal-content'>
+                <div class='modal-header'>
+                    <button type='button' class='close' data-dismiss='modal' aria-label='Close'><span aria-hidden='true'>&times;</span></button>
+                    <h4 id='modal_title'>New Game</h4>
+                </div>
+                <div class='modal-body'>
+                    <div id='message'></div><br/>
+                    <form class='form-inline'  method='post' enctype='multipart/form-data'>{% csrf_token %}
+                        <div>
+                            <div class="form-group">
+                                <label>Number of Mines:</label>
+                                {{ new_game_form.num_mines }}
+                            </div>
+                        </div>
+                        <br/>
+                        <button type='submit' class='form-control btn btn-primary' id='newgamesubmit'>Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class='message_modal_container'>
+</div>
+
 
 
 {% endblock content %}
 {% block extra_js %}
+
+var game_id = {% if game.id %} {{ game.id }} {% else %} null{% endif %};
+
+if (game_id === null){
+    $('#newgamemodal').modal('show');
+}
+
 $('#reset').bind('click', function(e) {
     e.preventDefault();
-    reset_game("{% url 'ajax_reset_game' %}", {{ game.id }});
+    reset_game("{% url 'ajax_reset_game' %}", game_id);
 });
 
 $('#undo').bind('click', function(e) {
@@ -66,7 +94,7 @@ $('#undo').bind('click', function(e) {
     var x = 0;
     var y = 0;
     var move_type = 'undo';
-    submit_move('{% url 'ajax_submit_move' %}', {{ game.id }}, x, y, move_type );
+    submit_move('{% url 'ajax_submit_move' %}', game_id, x, y, move_type );
 });
 
 $('#toggle-flag').bind('click', function(e) {
@@ -79,6 +107,7 @@ $('.location').bind('click',function(e) {
     var x = $(this).attr('x');
     var y = $(this).attr('y');
     var move_type = $('#toggle-flag').val();
-    submit_move('{% url 'ajax_submit_move' %}', {{ game.id }}, x, y, move_type );
+    submit_move('{% url 'ajax_submit_move' %}', game_id, x, y, move_type );
 });
+
 {% endblock extra_js %}
